FXOLAT-207: fix some erros in Spring configuration specific to tests, make the Grizzly start only once to prevent memory leaks, update pom to use the resources in src/test/java..., fix some path in olat.local.properties (test specific)